[package]
name = "speakit"
version = "0.1.2"
authors = ["Mike Roberts <42875462+mrob95@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "speakit"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.9.0-alpha.1"
features = ["extension-module"]

[package.metadata.maturin]
classifier = ["Programming Language :: Python"]